--- a/style.css
+++ b/style.css
@@ -63,53 +63,10 @@ img{
 
 } 
 
-@media screen and (min-width: 393px){
-    .hometext h1{
-        font-size: 6em;
-        line-height: 70px;
-        margin-top: 90px;
-    }
-    .hometext span{
-    letter-spacing: 1px;
-    text-align: center;
-    display: block;
-    font-size: 1.4em;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 40px;
-}
-}
-
-@media screen and (min-width: 720px){
-    .hometext h1{
-        font-size: 9em;
-        line-height: 107px;
-        margin-bottom: 100px;
-    }
-    .hometext span{
-    letter-spacing: 1px;
-    text-align: center;
-    display: block;
-    font-size: 2.4em;
-    margin-left: 10px;
-    margin-bottom: -40px;
-}
-}
-
-@media screen and (min-width: 832px){
-    .hometext h1{
-        font-size: 8em;
-        line-height: 95px;
-        margin-bottom: 50px;
-    }
-    .hometext span{
-    letter-spacing: 2px;
-    text-align: center;
-    display: block;
-    font-size: 2.4em;
-    margin-left: 10px;
-    margin-bottom: -40px;
-}
+/* =======logo======= */
+.logo {
+    width: 10%;
+    float: right;
 }
 
 /* =======button======= */
@@ -139,17 +96,6 @@ img{
     transition: 150ms ease-in;
 }
 
-@media screen and (min-width:320px){
-    .button{
-        font-size: 1rem;
-    }
-}
-
-@media screen and (min-width:916px){
-    .button{
-        font-size: 1.7rem;
-    }
-}
 
 
 /* ======header====== */
@@ -158,78 +104,6 @@ header{
     left: 0;
     right: 0;
     margin: 1em;
-}
-
-nav ul{
-    margin: 0;
-    padding: 0;
-    margin-top: -20px;
-    list-style: none;
-}
-
-nav li{
-    display: inline-block;
-    margin: 1em;
-}
-
-nav a{
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 15.5px;
-    padding: 0.3px;
-    color: chocolate;
-}
-
-nav a:hover,
-nav a:focus{
-    color: goldenrod;
-}
-
-@media screen and (min-width: 832px){
-    .logo{
-        font-size: 15px;
-        margin-top: -20px;
-        margin-left: 10px;
-        float: right;
-    }
-
-    nav{
-        float: right;
-        margin-top: -30px;
-    }
-
-    nav a{
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 24px;
-    padding: 0.4em;
-    color: chocolate;
-}
-}
-@media screen and (min-width: 768px){
-    .logo{
-        font-size: 18px;
-        margin-top: -20px;
-        margin-left: 10px;
-        float: right;
-    }
-
-    nav{
-        float: right;
-    }
-
-    nav ul{
-    margin: 0;
-    padding-top: 30px;
-    list-style: none;
-    }
-    nav a{
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 24px;
-    padding: 0.4em;
-    color: chocolate;
-}
 }
 
 /* =======home-bg======= */
@@ -241,108 +115,7 @@ nav a:focus{
     height: 100vh;
 }
 
-
-
-/* ========about-us======= */
-
-.about-text{
-    background-color: #232323;
-    padding: 4em;
-    outline: 2px solid chocolate;
-    outline-offset: -2.1em;
-    color: white;
-    position: relative;
-}
-
-.about-text p{
-    text-align: center;
-    font-family: monospace;
-}
-
-.about-text h1{
-    font-size: 2rem;
-    font-weight: 500;
-    color: chocolate;
-    margin-top: 0;
-    position: absolute;
-    top: .4em;
-    left: 50%;
-    transform: translateX(-100%);
-    margin-left: 50px;
-    padding: 0 3px;
-    background-color: #232323;
-}
-
-@media screen and (min-width:400px){
-    .about-text h1{
-        top: .8rem;
-        padding: 0 .365em;
-        left: 52%;
-    }
-}
-
-/* ========portfolio======= */
-
-.portfolio .container{
-    position: relative;
-    width: 1348px;
-    height: 600px;
-    margin: 30px 20px 20px 20px  ;
-    /* background: #262626; */
-}
-
-.portfolio .container .box{
-    position: relative;
-    width: calc(449.33px - 30px);
-    height: calc(300px - 30px);
-    background: #000;
-    float: left;
-    margin: 15px;
-    box-sizing: border-box;
-    overflow: hidden;
-    box-shadow: 0 5px 10px rgba(0,0,0,.8);
-}
-
-.portfolio .container .box:before{
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    box-sizing: border-box;
-    transition: 0.5s;
-    transform: scaleX(0);
-    opacity: 0;
-    z-index: 1;
-}
-
-.portfolio .container .box:hover:before{
-    transform: scaleX(1);
-    opacity: 1;
-
-}
-
-.portfolio .container .box:after{
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
-    box-sizing: border-box;
-    transition: 0.5s;
-    transform: scaleY(0);
-    opacity: 0;
-    z-index: 1;
-}
-
-
-/* footer */
+/* =======footer======= */
 .footer-main-div{
     width: 100%;
     height: 100px;
@@ -423,32 +196,4 @@ nav a:focus{
 .footer-bottom p a{
     color: black;
     text-transform: lowercase;
-}
-
-@media screen and (min-width:320px){
-    .footer-bottom p{
-    font-size: 11px;
-    padding-top: 4.5px;
-    }
-}
-
-@media screen and (min-width:360px){
-    .footer-bottom p{
-    font-size: 11px;
-    padding-top: 4.5px;
-    }
-}
-
-@media screen and (min-width:393px){
-    .footer-bottom p{
-    font-size: 11px;
-    padding-top: 4.5px;
-    }
-}
-
-@media screen and (min-width:414px){
-    .footer-bottom p{
-    font-size: 13px;
-    padding-top: 4px;
-    }
 }
