--- a/style.css
+++ b/style.css
@@ -15,26 +15,6 @@ body{
     text-align: center;
 }
 
-/***** Scroll Bar ********/
-body::-webkit-scrollbar{
-    width: 0.7rem;
-    height: 0.5rem;
-  }
-  
-  body::-webkit-scrollbar-track {
-    background-color: #000000;
-  }
-  
-  body::-webkit-scrollbar-thumb{
-    background-color: goldenrod;
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #b30000; 
-  }
-
 img{
     max-width: 100%;
     height: auto;
@@ -65,7 +45,7 @@ img{
 
 /* =======logo======= */
 .logo {
-    width: 10%;
+    width: 100px;
     float: right;
 }
 
