--- a/style.css
+++ b/style.css
@@ -4,15 +4,26 @@ html{
     scroll-behavior: smooth;
 }
 
-
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body{
     margin: 0;
     font-family: 'Heebo', cursive;
     text-align: center;
+}
+
+.imgbox {
+    display: grid;
+    height: 100%;
+}
+.center-fit {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
 }
 
 img{
