--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{
     text-align: center;
 }
 
-/* .fa {
+.fa {
     color: white;
-} */
+}
 
 .imgbox {
     display: grid;
@@ -44,12 +44,39 @@ img{
 
 .hometext h1{
     font-size: 6em;
-    line-height: 70px;
     text-align: center;
     font-weight: normal;
     text-shadow: 2px 2px black;
     color: white;
 } 
+
+.hometext h1{
+    font-size: 6em;
+    line-height: 70px;
+    text-align: center;
+} 
+
+@media screen and (min-width: 393px){
+    .hometext h1{
+        margin-top: 90px;
+    }
+}
+
+@media screen and (min-width: 720px){
+    .hometext h1{
+        font-size: 9em;
+        line-height: 107px;
+        margin-bottom: 100px;
+    }
+}
+
+@media screen and (min-width: 832px){
+    .hometext h1{
+        font-size: 8em;
+        line-height: 95px;
+        margin-bottom: 50px;
+    }
+}
 
 /* =======logo======= */
 .logo {
@@ -75,6 +102,7 @@ header{
     height: 50px;
     margin: 0px 10px;
     border-radius: 100%;
+    float: left;
 }
 
 .header1 ul li a{
@@ -94,5 +122,8 @@ header{
     padding: 6em 0;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
 }
