--- a/style.css
+++ b/style.css
@@ -43,39 +43,12 @@ img{
 /* =======title======= */
 
 .hometext h1{
-    font-size: 6em;
+    font-size: 15vmin;
     text-align: center;
+    line-height: 80px;
     font-weight: normal;
     text-shadow: 2px 2px black;
     color: white;
-} 
-
-.hometext h1{
-    font-size: 6em;
-    line-height: 70px;
-    text-align: center;
-} 
-
-@media screen and (min-width: 393px){
-    .hometext h1{
-        margin-top: 90px;
-    }
-}
-
-@media screen and (min-width: 720px){
-    .hometext h1{
-        font-size: 9em;
-        line-height: 107px;
-        margin-bottom: 100px;
-    }
-}
-
-@media screen and (min-width: 832px){
-    .hometext h1{
-        font-size: 8em;
-        line-height: 95px;
-        margin-bottom: 50px;
-    }
 }
 
 /* =======logo======= */
@@ -102,7 +75,6 @@ header{
     height: 50px;
     margin: 0px 10px;
     border-radius: 100%;
-    float: left;
 }
 
 .header1 ul li a{
@@ -118,12 +90,13 @@ header{
 
 /* =======home-bg======= */
 .hometext{
-    background-image: url("https://raw.githubusercontent.com/shvushon/photography/master/images/fulls/IMG_9103.jpg");
+    background-image: url("https://raw.githubusercontent.com/shvushon/photography/master/images/front.png");
     padding: 6em 0;
     background-size: cover;
-    background-attachment: fixed;
-    
-    max-width: 100%;
-    max-height: 100vh;
-    margin: auto;
+    height: 100vh;
+}
+
+.black-line {
+    height: 10vh;
+    background: black;
 }
