--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header{
 
 /* =======home-bg======= */
 .hometext{
-    background-image: url("https://raw.githubusercontent.com/shvushon/photography/master/images/front.png");
+    background-image: url("https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/front1.jpg");
     padding: 6em 0;
     background-size: cover;
     height: 100vh;
