--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header{
     display: inline-block;
     width: 50px;
     height: 50px;
-    margin: 0px 10px;
+    margin: 0px 5px;
     border-radius: 100%;
 }
 
@@ -90,10 +90,13 @@ header{
 
 /* =======home-bg======= */
 .hometext{
-    background-image: url("https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/front1.jpg");
+    background-image: url("https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/front2.jpg");
     padding: 6em 0;
     background-size: cover;
+    background-position: center;
     height: 100vh;
+    display: block;
+    margin: 0 auto;
 }
 
 .black-line {
