--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     margin: 0;
     font-family: 'Heebo', cursive;
     text-align: center;
+    background: black;
 }
 
 .fa {
@@ -87,7 +88,6 @@ header{
     line-height: 50px;
 }
 
-
 /* =======home-bg======= */
 .hometext{
     background-image: url("https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/front2.jpg");
@@ -99,7 +99,6 @@ header{
     margin: 0 auto;
 }
 
-.black-line {
-    height: 10vh;
-    background: black;
+#main {
+    margin-top: 50px;
 }
