--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ img{
 .hometext h1{
     font-size: 15vmin;
     text-align: center;
-    line-height: 80px;
+    line-height: 70px;
     font-weight: normal;
     text-shadow: 2px 2px black;
 }
@@ -98,3 +98,30 @@ header{
 #main {
     margin-top: 50px;
 }
+
+.loader {
+    border: 0.6vw solid #8a8a8a;
+    border-radius: 50%;
+    border-top: 0.6vw solid #ffffff;
+    width: 6vw;
+    height: 6vw;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    /* margin: auto;
+     */
+    /* margin: 0; */
+    position: fixed;
+    top: 44%;
+    left: 44%;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
