--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header{
 }
 
 #loader-container {
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
